[package]
name = "tarpc_pubsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc = {version = "0.27", features = ["full"]}
anyhow = "1.0"
futures = "0.3"
serde = {optional = true, version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
tokio-util = {version = "0.6.3", features = ["time"]}
tokio-serde = {version = "0.8", features =["json", "bincode"]}
tracing = {version = "0.1", default-features = false, features = ["attributes", "log"]}
tracing-subscriber = "0.2"
tracing-opentelemetry = {version = "0.15", default-features = false}
opentelemetry = {version = "0.16", default-features = false}
